--- a/src/main/java/com/taliter/fiscal/port/rxtx/package.html
+++ b/src/main/java/com/taliter/fiscal/port/rxtx/package.html
@@ -1,1 +1,1 @@
-<body>A bidirectional stream channel API implementation that uses <a href="http://rxtx.qbang.org/">the RXTX library</a> to communicate over serial ports.</body>
+<body>A bidirectional stream channel API implementation that uses <a href="http://rxtx.qbang.org/">RXTX</a> or <a href="https://github.com/NeuronRobotics/nrjavaserial">nrjavaserial</a> to communicate over serial ports.</body>
